--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 
     <modules>
         <module>spring-oauth2-client</module>
+        <module>spring-oauth2-resource-server</module>
     </modules>
 
 </project>
